# aegis-relay

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: deploy-mac-mini.yml
data-test-routes-lifecycle-open/amp_did_key_z6MkRecipient/: 550e8400-e29b-41d4-a716-446655440001.json
data-test-routes-lifecycle-token/amp_did_key_z6MkRecipient/: 550e8400-e29b-41d4-a716-446655440000.json
src/: admin_routes.rs  audit.rs  config.rs  discovery.rs  federation.rs  federation_verify.rs  identity_routes.rs  main.rs  prekey_routes.rs  prometheus.rs  relay_identity.rs  routes.rs  storage.rs
src/api/: mod.rs
src/config/: mod.rs
src/storage/: mod.rs
