[package]
name = "aegis-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
aegis-proto = { path = "../aegis-core/crates/aegis-proto" }
aegis-api-types = { path = "../aegis-core/crates/aegis-api-types" }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-rusqlite = "0.5"
async-trait = "0.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
