[package]
name = "aegis-relay"
version = "0.2.0"
edition = "2021"

[dependencies]
aegis-proto = { path = "../aegis-core/crates/aegis-proto" }
aegis-api-types = { path = "../aegis-core/crates/aegis-api-types" }
aegis-identity = { path = "../aegis-core/crates/aegis-identity" }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-rusqlite = "0.5"
async-trait = "0.1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.5", features = ["cors"] }
hickory-resolver = "0.24"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
aegis-crypto = { path = "../aegis-core/crates/aegis-crypto" }
