[package]
name = "aegis-relay"
version = "0.2.0"
edition = "2021"

[dependencies]
aegis-proto = { path = "../aegis-core/crates/aegis-proto" }
aegis-api-types = { path = "../aegis-core/crates/aegis-api-types" }
aegis-identity = { path = "../aegis-core/crates/aegis-identity" }
# Phase 6 federation auth (#32): relay generates its own hybrid signing
# identity at first boot to attest to delivery receipts. aegis-crypto's
# `HybridPqKeyBundle::generate()` produces the Ed25519 + ML-DSA-65 keypair
# we use; previously this crate was a dev-dep only.
aegis-crypto = { path = "../aegis-core/crates/aegis-crypto" }
# Direct primitives for receipt signing in `relay_identity::sign_receipt`.
# Versions match what aegis-core's workspace pins (kept in sync manually
# since aegis-relay isn't part of that workspace).
ed25519-dalek = { version = "2", features = ["rand_core"] }
ml-dsa = { version = "0.1.0-rc.9", features = ["rand_core"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-rusqlite = "0.5"
async-trait = "0.1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.5", features = ["cors"] }
hickory-resolver = "0.24"
# Phase 5 federation: relay-to-relay HTTPS push delivery (#28). rustls-tls
# avoids the platform OpenSSL footprint (matters for the slim Docker images
# in mlaify/aegis-deploy); `json` enables typed body decoding for
# StoreEnvelopeRequest mirrors.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
